feat: add a check for user uniqueness in the registration block; authentication refactoring
